fixed color contrast for better accessiblity

--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ body {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: black;
   text-decoration: none;
 }
-
+a:hover {
+  text-decoration: underline;
+}
 h1 {
   font-size: 1rem;
   text-align: center;
